# gauss-kruger-cpp

./: CMakeLists.txt  gausskruger.h  gausskruger_cli.cpp
